<resources>
    <string name="app_name">EkeMusic</string>
    <string name="shuffle">Shuffle</string>
    <string name="end">End</string>
    <string name="AppStyle.Toolbar">AppToolbar</string>
    <string name="title">Title</string>
    <string name="size">Size</string>
    <string name="duration">Duration</string>
    <string name="artist">Artist</string>
    <string name="todomycard">TODOCARD</string>
    <string name="id">id</string>
    <string name="wecan">wecan</string>
    <string name="toolbar_title">Ekemainai</string>
    <string name="rewindd">Rewind</string>
    <string name="backd">Back</string>
    <string name="paused">Pause</string>
    <string name="forwardd">Forward</string>
    <string name="play">Play</string>
    <string name="music_palyer">Music Palyer</string>
    <string name="songlyrics">Song.mp3</string>
    <string name="ekemainai_player">Ekemainai Player</string>
    <string name="ben">ben1</string>
    <string name="benn">ben2</string>
    <string name="ben3n">ben3</string>
    <string name="ben4n">ben4</string>
    <string name="ben5n">ben5</string>
    <string name="ben6n">ben6</string>
    <string name="ben7n">ben7</string>
    <string name="welcome">Welcome To Ekemainai Player</string>
    <string name="settings">Settings</string>
    <string name="sleep">Sleep</string>
    <string name="scan">Scan Media</string>
    <string name="share">Share</string>
    <string name="serviceerror">MUSIC SERVICE</string>
    <string name="art">art</string>
    <string name="Art">Art</string>
    <string name="select_background">Select Background</string>
    <string name="editor_insert_song_failed">Error with saving songs</string>
    <string name="editor_insert_song_successful">Songs saved</string>
    <string name="songsnum">All Songs </string>
    <string name="eke_DBLoad">Loading</string>
    <string name="eke_LVLoad">ListView</string>
    <string name="list_search">Search</string>
    <string name="search_songs">Search Songs</string>
    <string name="quit">Ekemainai Music Player</string>
    <string name="really_quit">Are you sure you want to close this player?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="screen">Screen</string>
    <string name="screen_background">Screen Background</string>
    <string name="search_description">Search Songs</string>
    <string name="song_title">Song Title</string>
    <string name="enqueue">Enqueue</string>
    <string name="add_song">Add to</string>
    <string name="ringtone">Ringtone</string>
    <string name="artwork">Album</string>
    <string name="share_me">Share</string>
    <string name="delete_me">Delete</string>
    <string name="empty_search">Search return zero songs</string>
    <string name="select_buttons_color">Select Buttons Color</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
