<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="2dp"
                android:descendantFocusability="blocksDescendants">

    <!-- A CardView that contains another views -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:id="@+id/linepad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/thumbnail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/listiconface_35px"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"/>

            <TextView
                android:id="@+id/song_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingStart="2dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.6"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@null"
                android:focusableInTouchMode="true"
                android:src="@drawable/ic_item_dialog"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/artistpad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linepad"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/song_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.5"
                android:maxLines="1"
                android:text="@string/artist"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/song_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_weight="0.8"
                android:minLines="1"
                android:text="@string/size"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/song_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:minLines="1"
                android:text="@string/duration"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="italic"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>