<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/player_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:fitsSystemWindows="true"
                android:descendantFocusability="blocksDescendants">
    <ImageView
        android:id="@+id/player_b_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:contentDescription="@null"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#60676767"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>

    <!-- Player Header -->
    <RelativeLayout
        android:id="@+id/player_header_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@android:color/transparent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <!-- Song Title -->
        <TextView
            android:id="@+id/songTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:maxLines="1"
            android:text="@string/ekemainai_player"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"/>

    </RelativeLayout>

    <!-- Song Thumbnail Image -->
    <RelativeLayout
        android:id="@+id/songThumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_header_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/thumbnailiface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/btn_playlist"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:civ_border_width="5dp"
            app:civ_border_overlay="true"
            app:civ_border_color="#FF000000"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_below="@id/thumbnailiface"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_fab_button"
            app:backgroundTint="@color/colorPrimary"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@id/thumbnailiface"
            android:layout_alignRight="@id/thumbnailiface"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/foot_lay"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#30676767"
        android:orientation="horizontal">

    <!-- Player Footer -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Repeat Button -->
            <ImageButton
                android:id="@+id/btnRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/shuffle"
                app:srcCompat="@drawable/ic_rep_button"
                android:layout_marginRight="15dp"/>

            <!-- Previous Button -->
            <ImageButton
                android:id="@+id/btnPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/ben3n"
                app:srcCompat="@drawable/ic_prev_button"/>

            <!-- Play Button -->
            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:background="@null"
                android:contentDescription="@string/ben5n"
                app:srcCompat="@drawable/ic_play_button"/>

            <!-- Next Button -->
            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/ben7n"
                app:srcCompat="@drawable/ic_next_button"/>

            <!-- Shuffle Button -->
            <ImageButton
                android:id="@+id/btnShuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/rewindd"
                app:srcCompat="@drawable/ic_shuff_button"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>

    </RelativeLayout>

    <!-- Progress Bar/Seek bar -->
    <SeekBar
        android:id="@+id/songProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/foot_lay"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_seekbar_bg_12dp"
        android:layout_gravity="start|end"/>

    <!-- Timer Display -->
    <RelativeLayout
        android:id="@+id/timerDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/songProgressBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <!-- Current Duration Label -->
        <TextView
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="start"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <!-- Total Duration Label -->
        <TextView
            android:id="@+id/songTotalDurationLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:textStyle="bold"/>
    </RelativeLayout>



</RelativeLayout>